[project]
name = "ile"
version = "0.0.1"
description = "one's home measurements"
readme = "README.adoc"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "Shelly", "Shelly Plug", "Shelly Plus Plug", "Shelly H&T", "Shelly Plus H&T",
    "QuestDB", "Grafana", "Telegraf"
]
authors = [
    { name = "180254", email = "180254@users.noreply.github.com" },
]
maintainers = [
    { name = "180254", email = "180254@users.noreply.github.com" },
]
# dependencies = requirements.txt files
# optional-dependencies = requirements-dev.txt files

[tool.ruff]
select = ["ALL"]
ignore = [
    # https://beta.ruff.rs/docs/rules/missing-type-self/
    "ANN101",
    # https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # https://beta.ruff.rs/docs/rules/commented-out-code/
    "ERA001",
    # https://beta.ruff.rs/docs/rules/missing-trailing-comma/
    "COM812",
    # https://beta.ruff.rs/docs/rules/pytest-unittest-assertion/
    "PT009"
]

line-length = 120
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
