[project]
name = "ile"
version = "0.0.1"
description = "one's home measurements"
readme = "README.adoc"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = [
    "Shelly",
    "Shelly Plug",
    "Shelly Plus Plug",
    "Shelly H&T",
    "Shelly Plus H&T",
    "QuestDB",
    "Grafana",
    "Telegraf",
]
authors = [
    { name = "180254", email = "180254@users.noreply.github.com" },
]
maintainers = [
    { name = "180254", email = "180254@users.noreply.github.com" },
]
# dependencies = requirements.txt files
# optional-dependencies = requirements-dev.txt files

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # https://beta.ruff.rs/docs/rules/missing-type-self/
    # "ANN101", # the rule has been removed
    # https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # https://beta.ruff.rs/docs/rules/commented-out-code/
    "ERA001",
    # https://beta.ruff.rs/docs/rules/missing-trailing-comma/
    "COM812",
    # https://beta.ruff.rs/docs/rules/pytest-unittest-assertion/
    "PT009",
    # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    # the rule may cause conflicts when used with the formatter
    "ISC001"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
python_executable = "./venv/bin/python3"
strict = true

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.13"
pythonPlatform = "Linux"
